# g031_sht40

./: Cargo.toml  Makefile  README.md  current_consumption.ods  memory.x
.cargo/: config.toml
.github/workflows/: rust.yml
firmware/: Cargo.toml  Embed.toml  Makefile
firmware/src/: bsp.rs  data.rs  display.rs  lib.rs  main.rs
hardware/: .gitignore  fp-lib-table  g031_sht40.kicad_pcb  g031_sht40.kicad_pro  g031_sht40.kicad_sch  project.kicad_sym
hardware/3d-models/: 1725656.stp
hardware/outputs/: g031_sht40.csv
hardware/outputs/gerbers/: g031_sht40-B_Cu.gbl  g031_sht40-B_Mask.gbs  g031_sht40-B_Paste.gbp  g031_sht40-B_Silkscreen.gbo  g031_sht40-Edge_Cuts.gm1  g031_sht40-F_Cu.gtl  g031_sht40-F_Mask.gts  g031_sht40-F_Paste.gtp  g031_sht40-F_Silkscreen.gto  g031_sht40-NPTH.drl  g031_sht40-PTH.drl
hardware/project.pretty/: 1725656.kicad_mod  AEM10941 module.kicad_mod  E-Ink display module.kicad_mod  SHT40 module.kicad_mod
src/: bsp.rs  data.rs  deactivate.rs  lib.rs  main.rs
