[package]
name = "g031_sht40"
version = "0.1.0"
authors = ["Yuri Volkov <volkov.yuri.alex@gmail.com>"]
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
defmt = "1.0.1"
defmt-rtt = {version = "1.1.0", features = ["disable-blocking-mode"]}
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
epd-waveshare = "0.6.0"
fixed = {version = "1.30.0", features = ["defmt"]}
format_no_std = "1.2.0"
inverted-pin = "1.0.0"
panic-halt = "1.0.0"
panic-probe = {version = "1.0.0", features = ["print-defmt"]}
# For rtic-monotonics
portable-atomic = {version = "1.13.0", features = ["critical-section"]}
rtic = {version = "2.2.0", features = ["thumbv6-backend"]}
rtic-monotonics = {version = "2.1.0", features = ["cortex-m-systick"]}
sht4x = "0.2.0"
stm32g0xx-hal = {version = "0.2.0", features = ["stm32g031", "rt"]}
u8g2-fonts = "0.7.2"


[patch.crates-io]
# For epd1in02 support
epd-waveshare = {git = "https://github.com/caemor/epd-waveshare.git", branch = "main"}
# For fixed SPI write
stm32g0xx-hal = {git = "https://github.com/brrastak/stm32g0xx-hal.git", branch = "spi_write_end"}

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
